# ecommerce

./: .gitignore
backend/: build.sh  pyproject.toml  requirements.txt  vercel.json
backend/backend/: settings.py  urls.py
backend/base/: models.py  serializers.py  signals.py
backend/base/migrations/: 0001_initial.py  0002_alter_shippingaddress_order.py  0002_order_shippingaddress_review_orderitem.py  0003_product_image.py
backend/base/urls/: product_urls.py  user_urls.py
backend/base/views/: __init__.py  order_views.py  product_views.py  user_views.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  store.js
frontend/src/actions/: cartActions.js  orderActions.js  productActions.js  userActions.js
frontend/src/components/: Checkout.js  CheckoutSteps.js  Header.js  Loader.js  Paginate.js  Product.js  ProductCarousel.js  SearchBox.js
frontend/src/reducers/: cartReducers.js  orderReducers.js  productReducers.js  userReducer.js
frontend/src/screens/: CartScreen.js  HomeScreen.js  LoginScreen.js  OrderListScreen.js  OrderScreen.js  PaymentScreen.js  PlaceOrderScreen.js  ProductEditScreen.js  ProductListScreen.js  ProductScreen.js  ProfileScreen.js  RegisterScreen.js  ShippingScreen.js  UserEditScreen.js  UserListScreen.js
