[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Karim Tayie <karimsherif2597@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.11"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
pillow = "^10.2.0"
djangorestframework-simplejwt = "^5.3.1"
django-environ = "^0.11.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
django-storages = {extras = ["s3"], version = "^1.14.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
